syntax = "proto3";

package proto;

option go_package = "HUGO/grpc/proto";

service GeoService {
  rpc GeoAddressSearch(GeoAddressRequest) returns (GeoAddressResponse){}
  rpc GeoAddressGeocode(GeocodeRequest) returns (GeocodeResponse){}
}

message GeoAddressRequest {
  string input = 1;
}

message GeoAddressResponse {
  bytes data = 1;
}

message GeocodeRequest {
  string lat = 1;
  string lon = 2;
}

message GeocodeResponse {
  bytes data = 1;
}

